--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <header>Martins Aquarium</header>
-    <main class="location">
-        <article>
+    <main>
+        <article class="container">
+            <section class="container2">
             <section class="fishCard">
                 <div>Image</div>
                 <div>Goldfish, Caught in Kodiak Island, Alaska</div>
@@ -23,8 +24,9 @@
                 <div>Image</div>
                 <div>Halibut, Caught in Kodiak Island, Alaska</div>
             </section>
+        </section>
+        <aside class="location">Kodiak Island, Alaska</aside>
     </article>
-        <aside>Kodiak Island, Alaska</aside>
     </main>
 </body>
 </html>
